--- a/css/blog.css
+++ b/css/blog.css
@@ -570,7 +570,7 @@ code {
 .lines {
     position: absolute;
     top: 8.1rem;
-    text-align: center;
+    text-align: right;
     padding: 0 1.5rem;
     color: var(--editor-line-number);
 }
@@ -720,6 +720,7 @@ code {
 
     .lines {
         top: 3.7rem;
+        text-align: right;
         padding-right: 0.3rem;
     }
 }
