--- a/css/article_3.css
+++ b/css/article_3.css
@@ -274,7 +274,7 @@ body::-webkit-scrollbar {
 
 .editor {
     background-color: var(--editor-background);
-    padding: 2rem 4rem;
+    padding: 2rem 5rem;
     /* height: 100%; */
     /* height: 100vh; */
 }
@@ -471,6 +471,7 @@ footer {
     position: relative;
     cursor: pointer;
     color: var(--body-text);
+    white-space: nowrap;
 }
 
 .color-theme-name:focus-within {
@@ -510,6 +511,14 @@ footer {
 .theme-picker > option {
     background-color: var(--background-color);
     color: var(--secondary-text);
+}
+
+.lines {
+    position: absolute;
+    top: 9.2rem;
+    text-align: right;
+    padding: 0 1.5rem;
+    color: var(--editor-line-number);
 }
 
 /* MEDIA QUERIES */
@@ -558,14 +567,14 @@ footer {
     .editor {
         display: block;
         justify-content: flex-start;
-        padding: 2rem 4rem 0 2rem;
+        padding: 2rem 4rem 2rem 3rem;
     }
     .editor1-text2 {
         padding-bottom: 1.3rem;
     }
     .editor-1 {
         /* background-color: var(--editor-background); */
-        padding: 1.5rem 2rem;
+        padding: 1.5rem 2rem 1.5rem 3rem;
     }
     .text-1-content {
         margin-top: 0;
@@ -575,7 +584,6 @@ footer {
         overflow: auto;
     }
     footer {
-        padding-bottom: 5rem;
         min-height: 0;
         flex-direction: column;
         font-size: 14px;
@@ -584,11 +592,23 @@ footer {
     .social-links {
         display: flex;
         flex-direction: column;
-        padding-bottom: 1.5rem;
+        padding-bottom: 1.2rem;
     }
 
     .bullet {
         display: none;
+    }
+
+    .lines {
+        position: absolute;
+        top: 4.2rem;
+        text-align: right;
+        padding-left: 0.7rem;
+        color: var(--editor-line-number);
+    }
+
+    .line-break {
+        margin: 1rem 0;
     }
 }
 @media screen and (max-width: 300px) {
