add line numbers to rundown project page and change bullet colors

--- a/css/article-2.css
+++ b/css/article-2.css
@@ -400,6 +400,10 @@ footer {
     color: var(--accent-hover);
 }
 
+.bullet {
+    color: var(--secondary-text);
+}
+
 .color-theme-name {
     position: relative;
     cursor: pointer;
