--- a/css/article_3.css
+++ b/css/article_3.css
@@ -467,6 +467,10 @@ footer {
     color: var(--body-text);
 }
 
+.bullet {
+    color: var(--secondary-text);
+}
+
 .color-theme-name {
     position: relative;
     cursor: pointer;
