--- a/css/article-5.css
+++ b/css/article-5.css
@@ -309,6 +309,10 @@ footer {
     color: var(--accent-hover);
 }
 
+.bullet {
+    color: var(--secondary-text);
+}
+
 .color-theme-name {
     position: relative;
     cursor: pointer;
