--- a/css/article_4.css
+++ b/css/article_4.css
@@ -462,6 +462,10 @@ footer {
     color: var(--body-text);
 }
 
+.bullet {
+    color: var(--secondary-text);
+}
+
 .color-theme-name {
     position: relative;
     cursor: pointer;
