--- a/css/nexo.css
+++ b/css/nexo.css
@@ -338,6 +338,10 @@ footer {
     color: var(--accent-hover);
 }
 
+.bullet {
+    color: var(--secondary-text);
+}
+
 .color-theme-name {
     position: relative;
     cursor: pointer;
