--- a/css/project.css
+++ b/css/project.css
@@ -359,6 +359,10 @@ footer {
     color: var(--accent-hover);
 }
 
+.bullet {
+    color: var(--secondary-text);
+}
+
 .color-theme-name {
     position: relative;
     cursor: pointer;
