add zoom in cursor to article images

--- a/css/article-5.css
+++ b/css/article-5.css
@@ -270,6 +270,7 @@ body::-webkit-scrollbar {
 img {
     max-width: 100%;
     margin-bottom: 1.5rem;
+    cursor: zoom-in;
 }
 
 .article-content p {
