--- a/css/article-2.css
+++ b/css/article-2.css
@@ -289,6 +289,7 @@ body::-webkit-scrollbar {
 img {
     max-width: 100%;
     margin-bottom: 1.5rem;
+    cursor: zoom-in;
 }
 
 .article-subheading {
