--- a/css/article_3.css
+++ b/css/article_3.css
@@ -310,6 +310,7 @@ h1 {
     width: 100%;
     height: 100%;
     object-fit: contain;
+    cursor: zoom-in;
 }
 .text-1 {
     color: var(--body-text);
