hide visible scrollbars on mobile screen

--- a/css/new-article.css
+++ b/css/new-article.css
@@ -548,6 +548,10 @@ footer {
     body::-webkit-scrollbar {
         display: none;
     }
+
+    .scroll-bar::-webkit-scrollbar {
+        display: none;
+    }
     .container {
         margin-top: 1px;
     }
