--- a/css/article_4.css
+++ b/css/article_4.css
@@ -526,6 +526,11 @@ footer {
     body::-webkit-scrollbar {
         display: none;
     }
+
+    .scroll-bar::-webkit-scrollbar {
+        display: none;
+    }
+
     .container {
         margin-top: 1px;
     }
