--- a/css/nexo.css
+++ b/css/nexo.css
@@ -395,6 +395,16 @@ footer {
     color: var(--editor-line-number);
 }
 
+.lines-1:hover {
+    color: var(--editor-line-number-hover);
+    cursor: pointer;
+}
+
+.lines-1:active,
+.lines-1:focus {
+    color: var(--editor-line-number-hover);
+}
+
 .mobile-view {
     display: none;
 }
