--- a/css/article_3.css
+++ b/css/article_3.css
@@ -526,6 +526,16 @@ footer {
     color: var(--editor-line-number);
 }
 
+.lines-1:hover {
+    color: var(--editor-line-number-hover);
+    cursor: pointer;
+}
+
+.lines-1:active,
+.lines-1:focus {
+    color: var(--editor-line-number-hover);
+}
+
 /* MEDIA QUERIES */
 @media screen and (max-width: 600px) {
     body::-webkit-scrollbar {
