--- a/css/server.css
+++ b/css/server.css
@@ -403,6 +403,16 @@ footer {
     color: var(--editor-line-number);
 }
 
+.lines-1:hover {
+    color: var(--editor-line-number-hover);
+    cursor: pointer;
+}
+
+.lines-1:active,
+.lines-1:focus {
+    color: var(--editor-line-number-hover);
+}
+
 @media (max-width: 599px) {
     body::-webkit-scrollbar {
         display: none;
